--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -21,6 +21,7 @@ Sites that are using ikiwiki include:
 * Christian Aichinger's [homepage](http://greek0.net/)
 * <a href="http://modeemi.fi/~tuomov/ion/">ion</a> window manager homepage
 * Ben A'Lee's [homepage](http://bmalee.eu/~bma/)
+* Recai Oktaş's [homepage](http://kirkambar.net/) (uses [[Git]] backend, Turkish language only).
 
 Please feel free to add your own ikiwiki site!
 
