* Patch from Recai to kill utf-8 on the wiki name when generating the   session cookie.

--- a/debian/changelog
+++ b/debian/changelog
@@ -25,6 +25,8 @@ ikiwiki (1.27) UNRELEASED; urgency=low
   * If an inlined page has a permalink, link the page title to that.
   * Patch from Recai to use utf8 when reading the setup file, so that
     utf8 wikinames from there will be used properly.
+  * Patch from Recai to kill utf-8 on the wiki name when generating the
+    session cookie.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 10 Sep 2006 14:06:01 -0400
 
