--- a/debian/changelog
+++ b/debian/changelog
@@ -27,8 +27,9 @@ ikiwiki (1.27) UNRELEASED; urgency=low
     utf8 wikinames from there will be used properly.
   * Patch from Recai to kill utf-8 on the wiki name when generating the
     session cookie.
+  * Change ddate plugin to use the DateTime::Calendar::Discordian perl module.
 
- -- Joey Hess <joeyh@debian.org>  Sun, 10 Sep 2006 14:06:01 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu, 14 Sep 2006 18:25:27 -0400
 
 ikiwiki (1.26) unstable; urgency=low
 
