* Fix a baseurl problem in hyperestradier search results.

--- a/debian/changelog
+++ b/debian/changelog
@@ -28,8 +28,9 @@ ikiwiki (1.27) UNRELEASED; urgency=low
   * Patch from Recai to kill utf-8 on the wiki name when generating the
     session cookie.
   * Change ddate plugin to use the DateTime::Calendar::Discordian perl module.
+  * Fix a baseurl problem in hyperestradier search results.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 14 Sep 2006 18:25:27 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu, 14 Sep 2006 23:05:02 -0400
 
 ikiwiki (1.26) unstable; urgency=low
 
