add family wiki

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -22,6 +22,7 @@ Sites that are using ikiwiki include:
 * <a href="http://modeemi.fi/~tuomov/ion/">ion</a> window manager homepage
 * Ben A'Lee's [homepage](http://bmalee.eu/~bma/)
 * Recai Oktaş's [homepage](http://kirkambar.net/) (uses [[Git]] backend, Turkish language only).
+* [Hess family wiki](http://kitenet.net/~family/)
 
 Please feel free to add your own ikiwiki site!
 
