--- a/debian/changelog
+++ b/debian/changelog
@@ -29,8 +29,9 @@ ikiwiki (1.27) UNRELEASED; urgency=low
     session cookie.
   * Change ddate plugin to use the DateTime::Calendar::Discordian perl module.
   * Fix a baseurl problem in hyperestradier search results.
+  * Add a stub local.css to avoid problems with 404's.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 14 Sep 2006 23:05:02 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 15 Sep 2006 13:02:48 -0400
 
 ikiwiki (1.26) unstable; urgency=low
 
