--- a/debian/changelog
+++ b/debian/changelog
@@ -30,8 +30,10 @@ ikiwiki (1.27) UNRELEASED; urgency=low
   * Change ddate plugin to use the DateTime::Calendar::Discordian perl module.
   * Fix a baseurl problem in hyperestradier search results.
   * Add a stub local.css to avoid problems with 404's.
+  * Patch from Recai to fix a wide character warning from the search plugin
+    during setup if the wikiname contains utf8.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 15 Sep 2006 13:02:48 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 15 Sep 2006 13:10:06 -0400
 
 ikiwiki (1.26) unstable; urgency=low
 
