--- a/debian/changelog
+++ b/debian/changelog
@@ -32,7 +32,7 @@ ikiwiki (1.27) UNRELEASED; urgency=low
   * Add a stub local.css to avoid problems with 404's.
   * Patch from Recai to fix a wide character warning from the search plugin
     during setup if the wikiname contains utf8.
-  * Yet another fix for those poor case-sensative OSX users.
+  * Yet another fix for those poor case-insensative OSX users.
 
  -- Joey Hess <joeyh@debian.org>  Fri, 15 Sep 2006 13:19:54 -0400
 
