web commit by JamesWestby: Add my new wiki

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -23,6 +23,7 @@ Sites that are using ikiwiki include:
 * Ben A'Lee's [homepage](http://bmalee.eu/~bma/)
 * Recai Oktaş's [homepage](http://kirkambar.net/) (uses [[Git]] backend, Turkish language only).
 * [Hess family wiki](http://kitenet.net/~family/)
+* [Debian Mentors wiki](http://jameswestby.net/mentors/)
 
 Please feel free to add your own ikiwiki site!
 
