--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -24,7 +24,7 @@ Sites that are using ikiwiki include:
 * Recai Oktaş's [homepage](http://kirkambar.net/) (uses [[Git]] backend, Turkish language only).
 * [Hess family wiki](http://kitenet.net/~family/)
 * [Debian Mentors wiki](http://jameswestby.net/mentors/)
-
+* LinuxWorld.com [monkey.linuxworld.com](https://monkey.linuxworld.com/) contributor wiki (git backend)
 Please feel free to add your own ikiwiki site!
 
 See also: [ikiwiki popcon graph](http://people.debian.org/~igloo/popcon-graphs/index.php?packages=ikiwiki)
