--- a/doc/bugs/markdown_module_location.mdwn
+++ b/doc/bugs/markdown_module_location.mdwn
@@ -9,3 +9,7 @@ I tried to come up with the magical invocation to allow either location
 to be used by ikiwiki, but I couldn't do it.
 
 -- JamesWestby
+
+Fixed, I think --[[Joey]]
+
+[[bugs/done]]
