--- a/debian/changelog
+++ b/debian/changelog
@@ -40,6 +40,7 @@ ikiwiki (1.27) UNRELEASED; urgency=low
     installed as just Markdown by apt.
   * Patch from James Westby to deal with the case where you're editing a
     new page, hit cancel, and need to be redirected to somewhere sane.
+  * Various documentation improvements by various wiki users.
 
  -- Joey Hess <joeyh@debian.org>  Fri, 15 Sep 2006 21:20:31 -0400
 
