--- a/doc/bugs/markdown_module_location.mdwn
+++ b/doc/bugs/markdown_module_location.mdwn
@@ -18,4 +18,6 @@ Fixed, I think --[[Joey]]
 > out how to do it. A flag if you use the second import would be an ugly solution.
 > -- [[JamesWestby]]
 
-
+Ok, the markdown in CPAN must be an entirely different version then if it
+doesn't has a Markdown::Markdown. Interesting, I'll have a look at it.
+--[[Joey]]
