web commit by JamesWestby

--- a/doc/bugs/404_when_cancel_create_page.mdwn
+++ b/doc/bugs/404_when_cancel_create_page.mdwn
@@ -29,6 +29,9 @@ if it is known.
 > that also deal with creating a new page with no defined $from location.
 > [[bugs/done]] --[[Joey]] 
 
+>> Yes of course, that's what I get for submitting an untested patch!
+>> I must stop doing that.
+
 [P.S. just above that is 
 
                 $type=$form->param('type');
@@ -51,3 +54,7 @@ at least exclude `/` and `..`. I'm happy to turn this in to a patch if you agree
 > garbage an attacker might try to put in. If it wasn't for that check,
 > using possibly_foolish_untaint there would be _very_ foolish indeed.. 
 > --[[Joey]]
+
+>> Nice, sorry I missed it. 
+>> I must say thankyou for creating ikiwiki.
+>> The more I look at it, the more I admire what you are doing with it and how you are going about it
