web commit by JamesWestby

--- a/doc/bugs/markdown_module_location.mdwn
+++ b/doc/bugs/markdown_module_location.mdwn
@@ -21,3 +21,6 @@ Fixed, I think --[[Joey]]
 Ok, the markdown in CPAN must be an entirely different version then if it
 doesn't has a Markdown::Markdown. Interesting, I'll have a look at it.
 --[[Joey]]
+
+> It works if you use Text::Markdown::Markdown, sorry, I forgot to mention that.
+> --JamesWestby
