--- a/doc/bugs/markdown_module_location.mdwn
+++ b/doc/bugs/markdown_module_location.mdwn
@@ -24,3 +24,9 @@ doesn't has a Markdown::Markdown. Interesting, I'll have a look at it.
 
 > It works if you use Text::Markdown::Markdown, sorry, I forgot to mention that.
 > --JamesWestby
+
+I think what I've committed now will work in all cases. Well, unless there
+are even more forks of markdown out there (the CPAN module is a fork
+apparently...) 
+
+[[bugs/done]] --[[Joey]]
