web commit by JamesWestby

--- a/doc/bugs/markdown_module_location.mdwn
+++ b/doc/bugs/markdown_module_location.mdwn
@@ -30,3 +30,5 @@ are even more forks of markdown out there (the CPAN module is a fork
 apparently...) 
 
 [[bugs/done]] --[[Joey]]
+
+> It now compiles here, thanks. --JamesWestby
