* Numerous tla fixes from Clint.

--- a/debian/changelog
+++ b/debian/changelog
@@ -43,6 +43,7 @@ ikiwiki (1.27) UNRELEASED; urgency=low
     the original markdown or the one in Debian.
   * Version the libcgi-session-perl dependency, some features that need
     the new version are used in some cases (sslcookie).
+  * Numerous tla fixes from Clint.
 
  -- Joey Hess <joeyh@debian.org>  Fri, 15 Sep 2006 22:28:31 -0400
 
