* Updated ikiwiki.svgz from Recai, includes an icon and is used to generate   a multi-resolution favicon.ico.

--- a/debian/changelog
+++ b/debian/changelog
@@ -44,8 +44,10 @@ ikiwiki (1.27) UNRELEASED; urgency=low
   * Version the libcgi-session-perl dependency, some features that need
     the new version are used in some cases (sslcookie).
   * Numerous tla fixes from Clint.
+  * Updated ikiwiki.svgz from Recai, includes an icon and is used to generate
+    a multi-resolution favicon.ico.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 15 Sep 2006 22:28:31 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 16 Sep 2006 10:30:35 -0400
 
 ikiwiki (1.26) unstable; urgency=low
 
