--- a/doc/plugins/favicon.mdwn
+++ b/doc/plugins/favicon.mdwn
@@ -2,5 +2,6 @@
 [[tag type/chrome]]
 
 If this plugin is enabled, then an icon link is added to pages, for web
-browsers to display. The icon is currently hardcoded to be a favicon.png,
-which must be in the root of the wiki.
+browsers to display. The icon is currently hardcoded to be a favicon.ico,
+which must be in the root of the wiki. The [[logo]] page explains how this
+icon was generated.
