--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -22,7 +22,7 @@ run a simple wiki without page history, it can do that too.
 
 ## A wiki compiler
 
-ikiwiki is a wiki compiler; it builds static website for your wiki, and
+ikiwiki is a wiki compiler; it builds a static website for your wiki, and
 updates it as pages are edited. It is fast and smart about updating a wiki,
 it only builds pages that have changed (and tracks things like creation of
 new pages and links that can indirectly cause a page to need a rebuild)
