--- a/doc/logo.mdwn
+++ b/doc/logo.mdwn
@@ -8,6 +8,7 @@ added).
 
 * [[ikiwiki_logo|ikiwiki.png]]  
   [[ikiwiki_logo_large|ikiwiki_large.png]]
+  [[ikiwiki_icon|ikiwiki_icon.png]]
 
   [[SVG_source|ikiwiki.svgz]], can be used to generate a logo at any size
   with a command like:  
@@ -18,7 +19,7 @@ added).
 
 	inkscape -w 16 -i favicon -e favicon.ico ikiwiki.svgz
 
-  A larger icon (80x15 pixels) can also be generated as follows:
+  The icon can also be generated as follows:
 
   	inkscape -w 80 -i icon -e icon.png ikiwiki.svgz
 
