--- a/doc/logo.mdwn
+++ b/doc/logo.mdwn
@@ -8,7 +8,7 @@ added).
 
 * [[ikiwiki_logo|ikiwiki.png]]  
   [[ikiwiki_logo_large|ikiwiki_large.png]]  
-  [[ikiwiki_icon|ikiwiki_icon.png]]
+  [[ikiwiki_button|ikiwiki_button.png]]
 
   [[SVG_source|ikiwiki.svgz]], can be used to generate a logo at any size
   with a command like:  
@@ -19,9 +19,9 @@ added).
 
 	inkscape -w 16 -i favicon -e favicon.ico ikiwiki.svgz
 
-  The icon can also be generated as follows:
+  The button can also be generated as follows:
 
-  	inkscape -w 80 -i icon -e icon.png ikiwiki.svgz
+  	inkscape -w 80 -i button -e ikiwiki_button.png ikiwiki.svgz
 
   Some other alternate icons are also included in the svg file and can
   be extracted by specifying their names.
