--- a/doc/logo.mdwn
+++ b/doc/logo.mdwn
@@ -23,8 +23,8 @@ added).
 
   	inkscape -w 80 -i button -e ikiwiki_button.png ikiwiki.svgz
 
-  Some other alternate icons are also included in the svg file and can
-  be extracted by specifying their names.
+  Some other alternate icons and buttons are also included in the svg file
+  and can be extracted by specifying their names.
 
   Contributed by Recai Oktaş
 
