* README.Debian: typo Closes: #388110

--- a/debian/changelog
+++ b/debian/changelog
@@ -46,8 +46,9 @@ ikiwiki (1.27) UNRELEASED; urgency=low
   * Numerous tla fixes from Clint.
   * Updated ikiwiki.svgz from Recai, includes an icon and is used to generate
     a multi-resolution favicon.ico.
+  * README.Debian: typo Closes: #388110
 
- -- Joey Hess <joeyh@debian.org>  Sat, 16 Sep 2006 10:30:35 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 18 Sep 2006 14:03:42 -0400
 
 ikiwiki (1.26) unstable; urgency=low
 
