--- a/debian/changelog
+++ b/debian/changelog
@@ -32,7 +32,7 @@ ikiwiki (1.27) UNRELEASED; urgency=low
   * Add a stub local.css to avoid problems with 404's.
   * Patch from Recai to fix a wide character warning from the search plugin
     during setup if the wikiname contains utf8.
-  * Yet another fix for those poor case-insensative OSX users.
+  * Yet another fix for those poor case-insensative `OSX users.
   * pagetemplate hooks are now also called when generating cgi pages.
   * Add a favicon plugin, which simply adds a link tag for an icon to each
     page (and cgis).
@@ -47,8 +47,11 @@ ikiwiki (1.27) UNRELEASED; urgency=low
   * Updated ikiwiki.svgz from Recai, includes an icon and is used to generate
     a multi-resolution favicon.ico.
   * README.Debian: typo Closes: #388110
+  * chomp trailing newlines at the end of templates read in by the template
+    plugin, to allow use of the template preprocessor directive in
+    whitespace-sensative situations. Closes: #387073
 
- -- Joey Hess <joeyh@debian.org>  Mon, 18 Sep 2006 14:03:42 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 18 Sep 2006 15:26:01 -0400
 
 ikiwiki (1.26) unstable; urgency=low
 
