--- a/debian/changelog
+++ b/debian/changelog
@@ -47,7 +47,7 @@ ikiwiki (1.27) UNRELEASED; urgency=low
   * Updated ikiwiki.svgz from Recai, includes an icon and is used to generate
     a multi-resolution favicon.ico.
   * README.Debian: typo Closes: #388110
-  * chomp trailing newlines at the end of templates read in by the template
+  * chomp trailing newline at the end of templates read in by the template
     plugin, to allow use of the template preprocessor directive in
     whitespace-sensative situations. Closes: #387073
 
