--- a/doc/plugins/search.mdwn
+++ b/doc/plugins/search.mdwn
@@ -7,3 +7,6 @@ full text search to ikiwiki, using the [[HyperEstraier]] engine.
 It's possible to configure HyperEstraier via one of ikiwiki's
 [[templates]], but for most users, no configuration should be needed aside
 from enabling the plugin.
+
+This plugin has a configuration option. To change the path to estseek.cgi,
+set `--estseek=/path/to/estseek.cgi`
