--- a/doc/install.mdwn
+++ b/doc/install.mdwn
@@ -1,4 +1,6 @@
-The easiest way to install ikiwiki is using the Debian package.
+The easiest way to install ikiwiki is using the Debian package, but you can
+also [[download]] the source and install it by hand. Ikiwiki should work on
+most unix-like systems.
 
 Ikiwiki is a perl program, and needs a recent version of perl such as
 5.8.8. (5.8.0 has been reported not to work).
