add a pointer to arch mirror

--- a/doc/download.mdwn
+++ b/doc/download.mdwn
@@ -28,3 +28,9 @@ The source in subversion can be browsed
 
 If you would like to be subscribed to svn commit messages for ikiwiki,
 mail joey@kitenet.net.
+
+# arch
+
+An unofficial arch mirror of the subversion repository is at
+`http://arch.debian.org/arh/private/srivasta/archive-2006-misc`
+and can be browsed [here](http://arch.debian.org/cgi-bin/archzoom.cgi/srivasta@debian.org--2006-misc?color=default?layout=larger?expand)
