--- a/doc/download.mdwn
+++ b/doc/download.mdwn
@@ -24,7 +24,7 @@ The current development version of ikiwiki can be accessed using subversion at
 `svn://ikiwiki.kitenet.net/ikiwiki/trunk`
 
 The source in subversion can be browsed
-[with viewcvs](http://ikiwiki.kitenet.net/cgi-bin/viewcvs.cgi/trunk/?root=ikiwiki).
+[here](http://ikiwiki.kitenet.net/cgi-bin/viewcvs.cgi/trunk/?root=ikiwiki).
 
 If you would like to be subscribed to svn commit messages for ikiwiki,
 mail joey@kitenet.net.
@@ -33,4 +33,4 @@ mail joey@kitenet.net.
 
 An unofficial arch mirror of the subversion repository is at
 `http://arch.debian.org/arh/private/srivasta/archive-2006-misc`
-and can be browsed [here](http://arch.debian.org/cgi-bin/archzoom.cgi/srivasta@debian.org--2006-misc?color=default?layout=larger?expand)
+and can be browsed [here](http://arch.debian.org/cgi-bin/archzoom.cgi/srivasta@debian.org--2006-misc?color=default?layout=larger?expand).
