--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -25,6 +25,7 @@ Sites that are using ikiwiki include:
 * [Hess family wiki](http://kitenet.net/~family/)
 * [Debian Mentors wiki](http://jameswestby.net/mentors/)
 * LinuxWorld.com [monkey.linuxworld.com](https://monkey.linuxworld.com/) contributor wiki (git backend)
+* Stefano Zacchiroli's [blog](http://www.bononia.it/~zack/blog/)
 
 Please feel free to add your own ikiwiki site!
 
