--- a/doc/news/seeking_article_writer/discussion.mdwn
+++ b/doc/news/seeking_article_writer/discussion.mdwn
@@ -9,3 +9,6 @@ to work from), we could come up with something.
 
 Do you know if they are just after an overview article, or an
 actual guide to setting up an instance? --JamesWestby
+
+> All I know is what I posted but I could get you in touch with Bruce.
+> --[[Joey]]
