* Add typography (SmartyPants) plugin by Recai.

--- a/debian/changelog
+++ b/debian/changelog
@@ -52,8 +52,9 @@ ikiwiki (1.27) UNRELEASED; urgency=low
     whitespace-sensative situations. Closes: #387073
   * Patch from James Westby to make the location of the estseek.cgi script
     configurable.
+  * Add typography (SmartyPants) plugin by Recai.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 18 Sep 2006 16:43:10 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu, 21 Sep 2006 16:27:44 -0400
 
 ikiwiki (1.26) unstable; urgency=low
 
