--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -61,6 +61,8 @@ Bulleted list
 * [Email](mailto:noone@invalid)
 * WikiLink without any markup.
 
+[[tag foo]]
+
 -----
 
 This sandbox is also a [[blog]]!
