* Add --render mode, which can be used to preview an edit at the command   line by test rendering a single page.

--- a/debian/changelog
+++ b/debian/changelog
@@ -53,8 +53,10 @@ ikiwiki (1.27) UNRELEASED; urgency=low
   * Patch from James Westby to make the location of the estseek.cgi script
     configurable.
   * Add typography (SmartyPants) plugin by Recai.
+  * Add --render mode, which can be used to preview an edit at the command
+    line by test rendering a single page.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 21 Sep 2006 16:27:44 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu, 21 Sep 2006 17:31:25 -0400
 
 ikiwiki (1.26) unstable; urgency=low
 
