web commit by StefanoZacchiroli: added link to a (to be written) page about css in ikiwiki

--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -59,11 +59,11 @@ Ikiwiki can also [[plugins/aggregate]] external blogs, feeding them into
 the wiki. This can be used to create a Planet type site that aggregates
 interesting feeds.
 
-## Valid html and css
+## Valid html and [[css]]
 
 ikiwiki aims to produce 
 [valid XHTML 1.0](http://validator.w3.org/check?url=referer).
-ikiwiki generates html using [[templates]], and uses css, so you can 
+ikiwiki generates html using [[templates]], and uses [[css]], so you can 
 change the look and layout of all pages in any way you would like.
 
 ## [[Plugins]]
