web commit by StefanoZacchiroli

--- a/doc/css_market.mdwn
+++ b/doc/css_market.mdwn
@@ -1,4 +1,4 @@
 # CSS Market
 ## aka: user contributed local.css files
 
-* [[css_market/zack]], contributed by [[StefanoZacchiroli]], customized mostly for *blogging purposes*, can be see in action on [zack's blog](http://www.bononia.it/~zack/blog/)
+* **[[css_market/zack]]**, contributed by [[StefanoZacchiroli]], customized mostly for *blogging purposes*, can be see in action on [zack's blog](http://www.bononia.it/~zack/blog/)
