--- a/doc/css.mdwn
+++ b/doc/css.mdwn
@@ -1,5 +1,8 @@
 # Using CSS with ikiwiki
 
-Ikiwiki comes with two CSS stylesheets: style.css, local.css. The idea is to customize the second one overriding the first one and defining brand new rendering rules.
+Ikiwiki comes with two CSS stylesheets: style.css, local.css. The idea is
+to customize the second one overriding the first one and defining brand new
+rendering rules.
 
-The [[css_market]] page is an attempt to collect user contribute local.css files.
+The [[css_market]] page is an attempt to collect user contributed local.css
+files.
