--- a/doc/css.mdwn
+++ b/doc/css.mdwn
@@ -1,4 +1,4 @@
-# Using CSS with ikiwiki
+## Using CSS with ikiwiki
 
 Ikiwiki comes with two CSS stylesheets: style.css, local.css. The idea is
 to customize the second one overriding the first one and defining brand new
