--- a/doc/css.mdwn
+++ b/doc/css.mdwn
@@ -1,8 +1,11 @@
 ## Using CSS with ikiwiki
 
-Ikiwiki comes with two CSS stylesheets: style.css, local.css. The idea is
-to customize the second one overriding the first one and defining brand new
-rendering rules.
+Ikiwiki comes with two CSS stylesheets: [[style.css]] and [[local.css]].
+The idea is to customize the second one overriding the first one and
+defining brand new rendering rules.
+
+While ikiwiki's default use of stylesheets is intentionally quite plain and
+minimalistic, CSS allows creating any kind of look you can dream up.
 
 The [[css_market]] page is an attempt to collect user contributed local.css
 files.
