--- a/doc/news/stylesheets.mdwn
+++ b/doc/news/stylesheets.mdwn
@@ -1,7 +1,9 @@
 Some people may consider ikiwiki's default look to be a bit plain. Someone
-on slashdot even suggested perhaps it uses html 1.0. While the default
-style is indeed plain, there's more fine-tuning going on than you might think,
-and it's actually all done with xhtml and style sheets.
+on slashdot even suggested perhaps it uses html 1.0. (Yes, an ikiwiki site
+has survived its first slashdotting. With static html, that's not very
+hard..) While the default style is indeed plain, there's more fine-tuning
+going on than you might think, and it's actually all done with xhtml and
+style sheets.
 
 Stefano Zacchiroli came up with the idea of adding a [[css_market]] page
 where [[IkiWikiUsers]] can share style sheets that you've come up with for
