--- a/doc/todo/sigs.mdwn
+++ b/doc/todo/sigs.mdwn
@@ -9,4 +9,13 @@ design goals for ikiwiki: keeping as much markup as possible out of the
 wiki and not adding nonstandard markup. And it's not significantly hard to
 type "--\[[Joey]]", and as to the date, we do have page history.
 
-I'm also unsure how to possibly implement this. Seems ikiwiki would need to expand the rune to the user's name when a page is saved, but that leaves out svn commits.
+I'm also unsure how to possibly implement this. Seems ikiwiki would need to
+expand the rune to the user's name when a page is saved, but that leaves
+out svn commits.
+
+---
+
+Alternate idea: Make a sig plugin, which would expand --Name to
+--[[user/Name]] (the "user/" bit would be configurable). This would be very
+easy to do, although it would need to try to avoid false positives, such 
+as `--foo` in C code..
