web commit by RecaiOktas: Yet another css.

--- a/doc/css_market.mdwn
+++ b/doc/css_market.mdwn
@@ -3,3 +3,8 @@ User contributed local.css files.
 * **[[css_market/zack]]**, contributed by [[StefanoZacchiroli]], customized
   mostly for *blogging purposes*, can be seen in action on 
   [zack's blog](http://www.bononia.it/~zack/blog/)
+
+* **[[css_market/kirkambar]]**, contributed by [[Roktas]].  This far from perfect
+  stylesheet follows a [Gitweb](http://www.kernel.org/git/?p=git/git.git;a=tree;f=gitweb)
+  like theme, so it may provide a consistent look'n feel along with the [[git]] backend. ;-)
+  You can see it in action on [kirkambar](http://kirkambar.net/) (Turkish content).
