* inline: Add ability to sort by page name, based on a patch from     Benjamin A'Lee.

--- a/doc/plugins/inline.mdwn
+++ b/doc/plugins/inline.mdwn
@@ -32,3 +32,5 @@ directive:
 * `actions` - If set to "yes" add links to the bottom of the inlined pages 
   for editing and discussion (if they would be shown at the top of the page
   itself).
+* `sort` - Controls how inlined pages are sorted. The default, "age" is to
+  sort newest pages first. Setting it to "title" will sort pages by title.
