--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ikiwiki (1.28) UNRELEASED; urgency=low
+
+  * inline: Add ability to sort by page name, based on a patch from
+    Benjamin A'Lee.
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 25 Sep 2006 17:06:39 -0400
+
 ikiwiki (1.27) unstable; urgency=low
 
   * Work on firming up the plugin interface:
