--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,10 @@ ikiwiki (1.28) UNRELEASED; urgency=low
 
   * inline: Add ability to sort by page name, based on a patch from
     Benjamin A'Lee.
+  * Fix a forkbomb in various calls to IPC::Open2, which has a highly
+    braindead interface. Closes: #389383
 
- -- Joey Hess <joeyh@debian.org>  Mon, 25 Sep 2006 17:06:39 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 25 Sep 2006 17:22:52 -0400
 
 ikiwiki (1.27) unstable; urgency=low
 
