--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,10 @@ ikiwiki (1.28) UNRELEASED; urgency=low
     Benjamin A'Lee.
   * Fix a forkbomb in various calls to IPC::Open2, which has a highly
     braindead interface. Closes: #389383
+  * Don't rm -rf ikiwiki on distclean, since a) there's no such file
+    and b) those poor Mac OSX users and their case insensative files!
 
- -- Joey Hess <joeyh@debian.org>  Mon, 25 Sep 2006 17:22:52 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 25 Sep 2006 17:40:48 -0400
 
 ikiwiki (1.27) unstable; urgency=low
 
