web commit by VictorMoral

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -26,6 +26,7 @@ Sites that are using ikiwiki include:
 * [Debian Mentors wiki](http://jameswestby.net/mentors/)
 * LinuxWorld.com [monkey.linuxworld.com](https://monkey.linuxworld.com/) contributor wiki (git backend)
 * Stefano Zacchiroli's [blog](http://www.bononia.it/~zack/blog/)
+* [Taquiones](http://taquiones.net): my personal website in spanish
 
 Please feel free to add your own ikiwiki site!
 
